--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTTXEBGT1H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZTTXEBGT1H');
+</script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinload.css" />
